sandc/test/fixtures/pbtRegression/shouldSucceed/staticMethodCopiesSharingTypeArgDefs/CopiesSharingTypeArgDefs.sand
pub class CopiesSharingTypeArgDefs {
    copy Foo.foo<T>(T[]);
    copy Bar.bar<T>(T);
}

class Foo {

}

class Bar {
    
}