sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedNamedFromDifferentlyNamed/Bar.sand
package bar;

pub class Bar extends Foo {
    
}